--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.7.7",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
+    "framer-motion": "^11.11.10",
     "next": "13.4.2",
     "postcss": "8.4.23",
     "react": "18.2.0",
