--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-modal": "^3.16.1",
     "react-slick": "^0.29.0",
     "recharts": "^2.13.0",
     "slick-carousel": "^1.8.1",
@@ -30,6 +31,7 @@
     "typescript": "5.0.4"
   },
   "devDependencies": {
+    "@types/react-modal": "^3.16.3",
     "@types/react-slick": "^0.23.10"
   }
 }
