--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@types/node": "20.2.0",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
+    "@types/streamifier": "^0.1.2",
     "autoprefixer": "10.4.14",
     "axios": "^1.7.7",
+    "cloudinary": "^2.5.1",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
     "framer-motion": "^11.11.10",
@@ -28,6 +30,7 @@
     "react-toastify": "^10.0.6",
     "recharts": "^2.13.0",
     "slick-carousel": "^1.8.1",
+    "streamifier": "^0.1.1",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
   },
