--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "autoprefixer": "10.4.14",
     "axios": "^1.7.7",
     "cloudinary": "^2.5.1",
+    "dotenv": "^16.4.7",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
     "framer-motion": "^11.11.10",
